--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@okrad/svelte-progressbar": "^1.4.0",
     "compression": "^1.7.1",
+    "cookie-session": "^1.4.0",
     "polka": "next",
     "sirv": "^0.4.0"
   },
