--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "compression": "^1.7.1",
     "cookie-session": "^1.4.0",
     "polka": "next",
-    "sirv": "^0.4.0"
+    "sirv": "^0.4.0",
+    "@vercel/node": "^1.7.0"
   },
   "devDependencies": {
     "npm-run-all": "^4.1.5",
